refreshed/styles/screen/iefontfix.css
/* Font loader file for _all_ browsers, despite the legacy name. See SkinRefreshed::initPage() for details. */
@font-face {
	font-family: 'Lato';
	font-style: normal;
	font-weight: 300;
	src: url(//fonts.gstatic.com/s/lato/v11/zLhfkPOm_5ykmdm-wXaiuw.eot);
	src: local('Lato Light'),
		local('Lato-Light'),
		url(//fonts.gstatic.com/s/lato/v11/kcf5uOXucLcbFOydGU24WALUuEpTyoUstqEm5AMlJo4.woff) format('woff'),
		url(//fonts.gstatic.com/s/lato/v11/nj47mAZe0mYUIySgfn0wpQ.ttf) format('truetype'),
		url(//fonts.gstatic.com/l/font?kit=7yKIrlBXX_AXuUv3Ts9_8g#Lato) format('svg');
}

@font-face {
	font-family: 'Lato';
	font-style: normal;
	font-weight: 700;
	src: url(//fonts.gstatic.com/s/lato/v11/sBtfDPlEIwvKKU53nAG7AQ.eot);
	src: local('Lato Bold'),
		local('Lato-Bold'),,
		url(//fonts.gstatic.com/s/lato/v11/qdgUG4U09HnJwhYI-uK18wLUuEpTyoUstqEm5AMlJo4.woff) format('woff'),
		url(//fonts.gstatic.com/s/lato/v11/DvlFBScY1r-FMtZSYIYoYw.ttf) format('truetype'),
		url(//fonts.gstatic.com/l/font?kit=hLECvlEj3pKlnS4NFs8NQw#Lato) format('svg');
}

@font-face {
	font-family: 'Lato body';
	font-style: normal;
	font-weight: 400;
	src: url(//fonts.gstatic.com/s/lato/v11/nQhiC-wSiJx0pvEuJl8d8A.eot);
	src: local('Lato Regular'),
		local('Lato-Regular'),
		url(//fonts.gstatic.com/s/lato/v11/qIIYRU-oROkIk8vfvxw6QvesZW2xOQ-xsNqO47m55DA.woff) format('woff'),
		url(//fonts.gstatic.com/s/lato/v11/v0SdcGFAl2aezM9Vq_aFTQ.ttf) format('truetype'),
		url(//fonts.gstatic.com/l/font?kit=H4oiIt_Ug9TU5ast0nUT-w#Lato) format('svg');
}

@font-face {
	font-family: 'WikiFont-Glyphs';
	src: url('wikifont/WikiFont-Glyphs.eot'); /* IE9 Compat Modes */
	src: url('wikifont/WikiFont-Glyphs.woff') format('woff'), /* Modern Browsers */
		url('wikifont/WikiFont-Glyphs.ttf') format('truetype'), /* Safari, Android, iOS */
		url('wikifont/WikiFont-Glyphs.svg#8088f7bbbdba5c9832b27edb3dfcdf09') format('svg'); /* Legacy iOS */
}

#header .wikiglyph-caret-down:before {
	font-size: .5em; /* IE compounds pseudo-element font-size strangely (https://connect.microsoft.com/IE/feedback/details/786969/relative-font-sizing-incorrect-on-pseudo-elements). We want a font-size of 1.25em (#header .wikiglyph-caret-down:before in main.css) but IE thinks 1em = 2.5em (.header-button .wikiglyph:before in main.css), so if we set font-size to .5em we get 1.25em */
}

